<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/kidsNameEditText"
        android:layout_width="181dp"
        android:layout_height="45dp"
        android:layout_marginTop="428dp"
        android:hint="@string/kidsEmails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupHeader" />

    <EditText
        android:id="@+id/passwordConfEditText"
        android:layout_width="179dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:hint="@string/password_conf"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="186dp"
        android:layout_height="38dp"
        android:layout_marginTop="40dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="168dp"
        android:layout_height="39dp"
        android:layout_marginTop="40dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="181dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:hint="@string/user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupHeader" />

    <TextView
        android:id="@+id/signupHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/signup_form"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="168dp"
        android:backgroundTint="@color/green"
        android:text="@string/signup"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTypeSpinner" />

    <!-- Label for User Type Spinner -->
    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="168dp"
        android:backgroundTint="@color/red"
        android:text="@string/cancel"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/signUpButton"
        app:layout_constraintTop_toBottomOf="@+id/userTypeSpinner" />

    <TextView
        android:id="@+id/userTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User Type:"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <Spinner
        android:id="@+id/userTypeSpinner"
        android:layout_width="135dp"
        android:layout_height="38dp"
        app:layout_constraintTop_toBottomOf="@id/userTypeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Label for Age Spinner -->
    <TextView
        android:id="@+id/studentAgeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/studentAge"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/userTypeSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        tools:ignore="HardcodedText" />

    <Spinner
        android:id="@+id/studentAgeSpinner"
        android:layout_width="138dp"
        android:layout_height="40dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/studentAgeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Free Days Label -->
    <TextView
        android:id="@+id/freeDaysLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/freeDays"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/studentAgeSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <!-- Multi-choice CheckBoxes -->
    <LinearLayout
        android:id="@+id/freeDaysLayout"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/freeDaysLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <CheckBox
            android:id="@+id/mondayCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon"/>

        <CheckBox
            android:id="@+id/tuesdayCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tue"/>

        <CheckBox
            android:id="@+id/wednesdayCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wed"/>

        <CheckBox
            android:id="@+id/thursdayCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thu"/>

        <CheckBox
            android:id="@+id/fridayCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fri"/>

        <CheckBox
            android:id="@+id/saturdayCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sat"/>

        <CheckBox
            android:id="@+id/sundayCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sun"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>