<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/joinActBtn"
        android:layout_width="219dp"
        android:layout_height="45dp"
        android:layout_marginTop="168dp"
        android:backgroundTint="@color/darkBlue"
        android:text="@string/joinAct"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/browseActBtn"
        android:layout_width="203dp"
        android:layout_height="49dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/darkBlue"
        android:text="@string/browseAct"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progReportBtn"
        app:layout_constraintVertical_bias="0.077" />

    <Button
        android:id="@+id/progReportBtn"
        android:layout_width="203dp"
        android:layout_height="47dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/darkBlue"
        android:text="@string/progReport"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinActBtn" />

    <Button
        android:id="@+id/monthlyActivitiesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/myActivities"
        android:backgroundTint="@color/darkBlue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/browseActBtn"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>